# GrIMPNotebooks

./: .gitignore  Features.md  Flowlines.ipynb  GIMPSubsetterNotebook.ipynb  GrIMPSubsetterNotebook.ipynb  NSIDCLoginNotebook.ipynb  README.md  pyproject.toml  qgisRemoteNotebook.ipynb
GPSpoints/: NEGIS-GPS.txt
binder/: apt.txt  environment.yml  start
